--- a/luban-parent/pom.xml
+++ b/luban-parent/pom.xml
@@ -1,197 +1,203 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.wiflish.luban</groupId>
-  <artifactId>luban-parent</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <name>${project.artifactId}:${project.version}</name>
-  <description>${project.artifactId}</description>
-  
-  <properties>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <license.inceptionYear>2023</license.inceptionYear>
-    <license.organizationName>wiflish</license.organizationName>
-    <license.licenseName>apache_v2</license.licenseName>
-    <license.addJavaLicenseAfterPackage>false</license.addJavaLicenseAfterPackage>
-    <license.projectName> </license.projectName>
-    <spring.boot.version>3.1.2</spring.boot.version>
-    <springdoc.version>2.1.0</springdoc.version>
-    <wiflish.luban.version>${project.version}</wiflish.luban.version>
-    <lombok.version>1.18.22</lombok.version>
-    <fastjson2.version>2.0.28</fastjson2.version>
-    <logback.version>1.4.8</logback.version>
-    <slf4j-api.version>2.0.7</slf4j-api.version>
-    <hutool.version>5.8.20</hutool.version>
-    <mysql.version>8.0.31</mysql.version>
-    <mybatis-plus.version>3.5.3.2</mybatis-plus.version>
-    <mybatis.plus.generator.version>3.5.3.2</mybatis.plus.generator.version>
-    <mybatis.plus.freemarker.version>1.2.4</mybatis.plus.freemarker.version>
-    <junit.version>4.13.2</junit.version>
-  </properties>
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-dependencies</artifactId>
-        <version>${spring.boot.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-autoconfigure</artifactId>
-        <version>${spring.boot.version}</version>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-web</artifactId>
-        <version>${spring.boot.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.wiflish.luban</groupId>
-        <artifactId>luban-dto</artifactId>
-        <version>${wiflish.luban.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.wiflish.luban</groupId>
-        <artifactId>luban-infra</artifactId>
-        <version>${wiflish.luban.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.wiflish.luban</groupId>
-        <artifactId>luban-web-starter</artifactId>
-        <version>${wiflish.luban.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.wiflish.luban</groupId>
-        <artifactId>luban-i18n-starter</artifactId>
-        <version>${wiflish.luban.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.wiflish.luban</groupId>
-        <artifactId>luban-mybatis-starter</artifactId>
-        <version>${wiflish.luban.version}</version>
-      </dependency>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.wiflish.luban</groupId>
+    <artifactId>luban-parent</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <name>${project.artifactId}:${project.version}</name>
+    <description>${project.artifactId}</description>
 
-      <!-- web -->
-      <dependency>
-        <groupId>org.springdoc</groupId>
-        <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
-        <version>${springdoc.version}</version>
-    </dependency>
-      
-      <!-- 日志 -->
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>${slf4j-api.version}</version>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-classic</artifactId>
-        <version>${logback.version}</version>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-core</artifactId>
-        <version>${logback.version}</version>
-        <scope>provided</scope>
-      </dependency>
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <license.inceptionYear>2023</license.inceptionYear>
+        <maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
+        <license.organizationName>- ${maven.build.timestamp} the original author or authors.</license.organizationName>
+        <license.licenseName>apache_v2</license.licenseName>
+        <license.addJavaLicenseAfterPackage>false</license.addJavaLicenseAfterPackage>
+        <license.projectName>luban-cloud</license.projectName>
+        <license.processStartTag>************</license.processStartTag>
+        <license.sectionDelimiter>------------</license.sectionDelimiter>
+        <license.processEndTag>************</license.processEndTag>
+        <license.skipUpdateLicense>false</license.skipUpdateLicense>
+        <license.excludes>**/*.sql,**/*.xml</license.excludes>
+        <spring.boot.version>3.1.2</spring.boot.version>
+        <springdoc.version>2.1.0</springdoc.version>
+        <wiflish.luban.version>${project.version}</wiflish.luban.version>
+        <lombok.version>1.18.22</lombok.version>
+        <fastjson2.version>2.0.28</fastjson2.version>
+        <logback.version>1.4.8</logback.version>
+        <slf4j-api.version>2.0.7</slf4j-api.version>
+        <hutool.version>5.8.20</hutool.version>
+        <mysql.version>8.0.31</mysql.version>
+        <mybatis-plus.version>3.5.3.2</mybatis-plus.version>
+        <mybatis.plus.generator.version>3.5.3.2</mybatis.plus.generator.version>
+        <mybatis.plus.freemarker.version>1.2.4</mybatis.plus.freemarker.version>
+        <junit.version>4.13.2</junit.version>
+    </properties>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring.boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-autoconfigure</artifactId>
+                <version>${spring.boot.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>${spring.boot.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.wiflish.luban</groupId>
+                <artifactId>luban-dto</artifactId>
+                <version>${wiflish.luban.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.wiflish.luban</groupId>
+                <artifactId>luban-infra</artifactId>
+                <version>${wiflish.luban.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.wiflish.luban</groupId>
+                <artifactId>luban-web-starter</artifactId>
+                <version>${wiflish.luban.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.wiflish.luban</groupId>
+                <artifactId>luban-i18n-starter</artifactId>
+                <version>${wiflish.luban.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.wiflish.luban</groupId>
+                <artifactId>luban-mybatis-starter</artifactId>
+                <version>${wiflish.luban.version}</version>
+            </dependency>
 
-      <!-- 工具包 -->
-      <dependency>
-        <groupId>org.projectlombok</groupId>
-        <artifactId>lombok</artifactId>
-        <version>${lombok.version}</version>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>com.alibaba.fastjson2</groupId>
-        <artifactId>fastjson2</artifactId>
-        <version>${fastjson2.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.alibaba.fastjson2</groupId>
-        <artifactId>fastjson2-extension-spring6</artifactId>
-        <version>${fastjson2.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>cn.hutool</groupId>
-        <artifactId>hutool-all</artifactId>
-        <version>${hutool.version}</version>
-      </dependency>
+            <!-- web -->
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
+                <version>${springdoc.version}</version>
+            </dependency>
 
-      <!-- db -->
-      <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <version>${mysql.version}</version>
-      </dependency>
+            <!-- 日志 -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j-api.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-core</artifactId>
+                <version>${logback.version}</version>
+                <scope>provided</scope>
+            </dependency>
 
-      <dependency>
-        <groupId>com.baomidou</groupId>
-        <artifactId>mybatis-plus-boot-starter</artifactId>
-        <version>${mybatis-plus.version}</version>
-      </dependency>
+            <!-- 工具包 -->
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.fastjson2</groupId>
+                <artifactId>fastjson2</artifactId>
+                <version>${fastjson2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.fastjson2</groupId>
+                <artifactId>fastjson2-extension-spring6</artifactId>
+                <version>${fastjson2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool.version}</version>
+            </dependency>
 
-      <!-- 测试包 -->
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>${junit.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-test</artifactId>
-        <version>${spring.boot.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.mybatis.scripting</groupId>
-        <artifactId>mybatis-freemarker</artifactId>
-        <version>${mybatis.plus.freemarker.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>com.baomidou</groupId>
-        <artifactId>mybatis-plus-generator</artifactId>
-        <version>${mybatis.plus.generator.version}</version>
-        <scope>test</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-maven-plugin</artifactId>
-            <version>${spring.boot.version}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.3.1</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.9.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>3.1.1</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
+            <!-- db -->
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
+
+            <!-- 测试包 -->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <version>${spring.boot.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis.scripting</groupId>
+                <artifactId>mybatis-freemarker</artifactId>
+                <version>${mybatis.plus.freemarker.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-generator</artifactId>
+                <version>${mybatis.plus.generator.version}</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>${spring.boot.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>3.3.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.9.0</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>3.1.1</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
