--- a/luban-samples/luban-samples-server/src/test/resources/generator.properties
+++ b/luban-samples/luban-samples-server/src/test/resources/generator.properties
@@ -1,50 +1,8 @@
-# ******************
-# ******************
-# Copyright (C) 2023 wiflish
-# ******************
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-# 
-#      http://www.apache.org/licenses/LICENSE-2.0
-# 
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-# -----------------# ***
-# %%
-# Copyright (C) 2023 wiflish
-# %%
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-# 
-#      http://www.apache.org/licenses/LICENSE-2.0
-# 
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and# %%
-# Copyright (C) 2023 wiflish
-# %%
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-# 
-#      http://www.apache.org/licenses/LICENSE-2.0
-# 
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and# mybatis-plus code generator
-
 generator.author=xiezhengrong
-generator.parent.package=com.wiflish.luban.samples
+generator.parent.package=com.wiflish.luban.samples.mybatis.infra
 
-generator.db.url=jdbc:mysql://47.111.117.8:4306/luban_samples?useUnicode=true&characterEncoding=utf8
+generator.db.url=jdbc:h2:file:/tmp/luban_samples
 generator.db.username=root
-generator.db.password=E7EVshwX7yRx4Ntuh5
+generator.db.password=root
 generator.db.include.table_prefix_names=t_
 generator.db.include.table_names=t_user
