--- a/luban-samples/luban-samples-server/src/test/resources/generator.properties
+++ b/luban-samples/luban-samples-server/src/test/resources/generator.properties
@@ -1,4 +1,4 @@
-generator.author=xiezhengrong
+generator.author=wiflish
 generator.parent.package=com.wiflish.luban.samples.mybatis.infra
 
 generator.db.url=jdbc:h2:file:/tmp/luban_samples
