--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.wiflish.luban</groupId>
-  <artifactId>luban</artifactId>
+  <artifactId>luban-cloud</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>${project.artifactId}:${project.version}</name>
@@ -18,6 +18,7 @@
   <modules>
     <module>luban-parent</module>
     <module>luban-core</module>
+    <module>luban-initializr</module>
     <module>luban-starters</module>
     <module>luban-samples</module>
   </modules>
