--- a/luban-initializr/luban-initializr-generator-microservice/pom.xml
+++ b/luban-initializr/luban-initializr-generator-microservice/pom.xml
@@ -4,12 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.wiflish.luban</groupId>
-		<artifactId>luban-initializr-parent</artifactId>
+		<artifactId>luban-initializr</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../luban-initializr-parent</relativePath>
 	</parent>
 
-    <artifactId>luban-initializr-microservice</artifactId>
+    <artifactId>luban-initializr-generator-microservice</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
 
@@ -25,6 +24,10 @@
 		<dependency>
 			<groupId>io.spring.initializr</groupId>
 			<artifactId>initializr-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.spring.initializr</groupId>
+			<artifactId>initializr-generator</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>io.spring.initializr</groupId>
