ddd项目代码重构.

--- a/luban-samples/pom.xml
+++ b/luban-samples/pom.xml
@@ -43,5 +43,6 @@
   <modules>
     <module>luban-samples-api</module>
     <module>luban-samples-server</module>
+    <module>luban-samples-ddd</module>
   </modules>
 </project>
