ddd项目代码重构.

--- a/luban-core/luban-infra/pom.xml
+++ b/luban-core/luban-infra/pom.xml
@@ -15,7 +15,7 @@
     <dependencies>
         <dependency>
             <groupId>com.wiflish.luban</groupId>
-            <artifactId>luban-dto</artifactId>
+            <artifactId>luban-domain</artifactId>
         </dependency>
 
         <dependency>
