--- a/luban-starters/luban-mybatis-starter/pom.xml
+++ b/luban-starters/luban-mybatis-starter/pom.xml
@@ -15,7 +15,7 @@
     <dependencies>
         <dependency>
             <groupId>com.wiflish.luban</groupId>
-            <artifactId>luban-infra</artifactId>
+            <artifactId>luban-app</artifactId>
         </dependency>
 
         <dependency>
