--- a/luban-core/luban-domain/pom.xml
+++ b/luban-core/luban-domain/pom.xml
@@ -14,6 +14,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.wiflish.luban</groupId>
+            <artifactId>luban-dto</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba.fastjson2</groupId>
             <artifactId>fastjson2</artifactId>
         </dependency>
