--- a/luban-parent/pom.xml
+++ b/luban-parent/pom.xml
@@ -37,6 +37,7 @@
         <mybatis-plus.version>3.5.3.2</mybatis-plus.version>
         <mybatis.plus.generator.version>3.5.3.2</mybatis.plus.generator.version>
         <mybatis.plus.freemarker.version>1.2.4</mybatis.plus.freemarker.version>
+        <springdoc.version>2.2.0</springdoc.version>
         <junit.version>4.13.2</junit.version>
     </properties>
     <dependencyManagement>
@@ -71,7 +72,7 @@
             </dependency>
             <dependency>
                 <groupId>com.wiflish.luban</groupId>
-                <artifactId>luban-infra</artifactId>
+                <artifactId>luban-app</artifactId>
                 <version>${wiflish.luban.version}</version>
             </dependency>
             <dependency>
@@ -151,6 +152,12 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>${mybatis-plus.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+                <version>${springdoc.version}</version>
             </dependency>
 
             <!-- 测试包 -->
