--- a/luban-samples/luban-samples-ddd/luban-samples-ddd-infra/pom.xml
+++ b/luban-samples/luban-samples-ddd/luban-samples-ddd-infra/pom.xml
@@ -23,14 +23,13 @@
 
         <dependency>
             <groupId>com.wiflish.luban</groupId>
-            <artifactId>luban-infra</artifactId>
+            <artifactId>luban-app</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
-
 
         <dependency>
             <groupId>com.alibaba</groupId>
