--- a/luban-samples/luban-samples-ddd/luban-samples-ddd-app/src/main/resources/application.yml
+++ b/luban-samples/luban-samples-ddd/luban-samples-ddd-app/src/main/resources/application.yml
@@ -11,8 +11,7 @@ spring:
     password: root
   sql:
     init:
-      schema-locations: classpath:db/h2/schema.sql
-      data-locations: classpath:db/h2/data.sql
+      schema-locations: classpath:h2/schema.sql
       mode: always
 
   h2:
