ddd项目代码重构.

--- a/luban-samples/luban-samples-ddd/luban-samples-ddd-app/src/main/resources/application.yml
+++ b/luban-samples/luban-samples-ddd/luban-samples-ddd-app/src/main/resources/application.yml
@@ -19,7 +19,10 @@ spring:
       enabled: true
       settings:
         web-allow-others: true
-
+luban:
+  mybatis:
+    autofill:
+      enable: false
 
 
 
