重构luban-samples-common项目,用于测试和代码样例

--- a/luban-samples/pom.xml
+++ b/luban-samples/pom.xml
@@ -41,8 +41,7 @@
     </plugins>
   </build>
   <modules>
-    <module>luban-samples-api</module>
-    <module>luban-samples-server</module>
     <module>luban-samples-ddd</module>
+    <module>luban-samples-common</module>
   </modules>
 </project>
