--- a/luban-core/luban-app/pom.xml
+++ b/luban-core/luban-app/pom.xml
@@ -15,11 +15,7 @@
     <dependencies>
         <dependency>
             <groupId>com.wiflish.luban</groupId>
-            <artifactId>luban-dto</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.wiflish.luban</groupId>
-            <artifactId>luban-domain</artifactId>
+            <artifactId>luban-service</artifactId>
         </dependency>
 
         <dependency>
