--- a/luban-samples/luban-samples-ddd/luban-samples-ddd-api/pom.xml
+++ b/luban-samples/luban-samples-ddd/luban-samples-ddd-api/pom.xml
@@ -14,6 +14,10 @@
 			<groupId>com.wiflish.luban</groupId>
 			<artifactId>luban-dto</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.wiflish.luban</groupId>
+			<artifactId>luban-service</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>com.alibaba</groupId>
