luban-ddd代码骨架模板.

--- a/luban-initializr/luban-initializr-generator/src/main/resources/templates/luban-ddd/luban-samples-ddd-app/src/main/resources/application.yml
+++ b/luban-initializr/luban-initializr-generator/src/main/resources/templates/luban-ddd/luban-samples-ddd-app/src/main/resources/application.yml
@@ -16,10 +16,9 @@ spring:
 
   h2:
     console:
-      enabled: false
+      enabled: true
       settings:
         web-allow-others: true
-
 luban:
   mybatis:
     autofill:
