--- a/luban-samples/luban-samples-ddd/luban-samples-ddd-app/src/main/resources/application.yml
+++ b/luban-samples/luban-samples-ddd/luban-samples-ddd-app/src/main/resources/application.yml
@@ -3,6 +3,10 @@ server:
   port: 8089 # 应用服务 WEB 访问端口
 
 spring:
+  security:
+    user:
+      password: 123456
+
   application:
     name: luban-samples-ddd
   datasource:
