开发环境下,设置springsecurity的日志级别为debug.

--- a/luban-samples/luban-samples-ddd/luban-samples-ddd-app/src/main/resources/application.yml
+++ b/luban-samples/luban-samples-ddd/luban-samples-ddd-app/src/main/resources/application.yml
@@ -24,14 +24,14 @@ spring:
       settings:
         web-allow-others: true
 
+logging:
+  level:
+    org.springframework.security.web: DEBUG
+
 luban:
   mybatis:
     autofill:
       enable: false
-
-
-
-
 
 ---
 # 生产环境配置.
