配置接口为不需要认证。

--- a/luban-samples/luban-samples-ddd/luban-samples-ddd-app/pom.xml
+++ b/luban-samples/luban-samples-ddd/luban-samples-ddd-app/pom.xml
@@ -40,6 +40,10 @@
             <artifactId>luban-mybatis-starter</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.wiflish.luban</groupId>
+            <artifactId>luban-web-starter</artifactId>
+        </dependency>
+        <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
         </dependency>
