luban-generator生成器，生成ddd结构的业务代码。

--- a/luban-core/pom.xml
+++ b/luban-core/pom.xml
@@ -45,5 +45,6 @@
     <module>luban-domain</module>
     <module>luban-service</module>
     <module>luban-app</module>
+    <module>luban-tools</module>
   </modules>
 </project>
