--- a/luban-samples/luban-samples-ddd/luban-samples-ddd-app/src/main/resources/application.yml
+++ b/luban-samples/luban-samples-ddd/luban-samples-ddd-app/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
     password: root
   sql:
     init:
-      schema-locations: classpath:h2/schema.sql
+      schema-locations: optional:classpath:h2/schema.sql
       mode: always
 
   h2:
