--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,13 @@
     <maven.compiler.target>17</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+
   <modules>
     <module>luban-parent</module>
     <module>luban-core</module>
     <module>luban-initializr</module>
     <module>luban-generator</module>
+    <module>luban-modules</module>
     <module>luban-starters</module>
     <module>luban-samples</module>
   </modules>
